# doc-rag

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: Stack vs Heap Memory.txt
notebooks/: rag_demo.ipynb
